--- a/frontend/styles/home.css
+++ b/frontend/styles/home.css
@@ -273,6 +273,31 @@ main {
   line-height: 1.5;
 }
 
+
+.footer-content {
+    background-color: var(--primary);
+    height: 200px;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 40px;
+  }
+
+  .footer-text {
+    color: var(--white);
+    font-size: 1rem;
+    text-align: center;
+    margin: 0 1rem;
+  }
+
+  .footer-link {
+    color: var(--success);
+    text-decoration: underline;
+    
+  
+  }
+  
 @media (max-width: 768px) {
   .header-content {
     padding: 0 1rem;
